--- a/src/main/resources/config/application-dev.yaml
+++ b/src/main/resources/config/application-dev.yaml
@@ -5,4 +5,6 @@ spring:
     password: admin
     driverClassName: org.h2.Driver
   jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+    spring.jpa:
+      database-platform: org.hibernate.dialect.H2Dialect
+      hibernate.ddl-auto: update
